# resnet_mnist

./: CMakeLists.txt  README.md  Resnet.cpp  Resnet.h  load_model.cpp  test_resnet_mnist.cpp  torch_test_resnet_mnist.cpp  train_resnet_mnist.cpp  utils.cu  utils.h
